Actividad 4/generated/python/YamlDockerParser.py
# Generated from YamlDocker.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YamlDockerParser ( Parser ):

    grammarFileName = "YamlDocker.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'version'", "'services'", "'networks'", 
                     "'image'", "'ports'", "'environment'", "'driver'", 
                     "':'", "'-'" ]

    symbolicNames = [ "<INVALID>", "VERSION_KEY", "SERVICES_KEY", "NETWORKS_KEY", 
                      "IMAGE_KEY", "PORTS_KEY", "ENVIRONMENT_KEY", "DRIVER_KEY", 
                      "COLON", "DASH", "STRING", "NUMBER", "NAME", "NEWLINE", 
                      "WS", "COMMENT" ]

    RULE_document = 0
    RULE_version_line = 1
    RULE_services_block = 2
    RULE_service_entry = 3
    RULE_service_prop = 4
    RULE_image_prop = 5
    RULE_ports_prop = 6
    RULE_environment_prop = 7
    RULE_networks_ref_prop = 8
    RULE_networks_block = 9
    RULE_network_entry = 10
    RULE_network_prop = 11
    RULE_list_item = 12
    RULE_value = 13

    ruleNames =  [ "document", "version_line", "services_block", "service_entry", 
                   "service_prop", "image_prop", "ports_prop", "environment_prop", 
                   "networks_ref_prop", "networks_block", "network_entry", 
                   "network_prop", "list_item", "value" ]

    EOF = Token.EOF
    VERSION_KEY=1
    SERVICES_KEY=2
    NETWORKS_KEY=3
    IMAGE_KEY=4
    PORTS_KEY=5
    ENVIRONMENT_KEY=6
    DRIVER_KEY=7
    COLON=8
    DASH=9
    STRING=10
    NUMBER=11
    NAME=12
    NEWLINE=13
    WS=14
    COMMENT=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(YamlDockerParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(YamlDockerParser.NEWLINE)
            else:
                return self.getToken(YamlDockerParser.NEWLINE, i)

        def version_line(self):
            return self.getTypedRuleContext(YamlDockerParser.Version_lineContext,0)


        def services_block(self):
            return self.getTypedRuleContext(YamlDockerParser.Services_blockContext,0)


        def networks_block(self):
            return self.getTypedRuleContext(YamlDockerParser.Networks_blockContext,0)


        def getRuleIndex(self):
            return YamlDockerParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = YamlDockerParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 28
                    self.match(YamlDockerParser.NEWLINE) 
                self.state = 33
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 34
                self.version_line()


            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 37
                self.services_block()


            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 40
                self.networks_block()


            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 43
                self.match(YamlDockerParser.NEWLINE)
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self.match(YamlDockerParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Version_lineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERSION_KEY(self):
            return self.getToken(YamlDockerParser.VERSION_KEY, 0)

        def COLON(self):
            return self.getToken(YamlDockerParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(YamlDockerParser.ValueContext,0)


        def NEWLINE(self):
            return self.getToken(YamlDockerParser.NEWLINE, 0)

        def getRuleIndex(self):
            return YamlDockerParser.RULE_version_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion_line" ):
                listener.enterVersion_line(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion_line" ):
                listener.exitVersion_line(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersion_line" ):
                return visitor.visitVersion_line(self)
            else:
                return visitor.visitChildren(self)




    def version_line(self):

        localctx = YamlDockerParser.Version_lineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_version_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(YamlDockerParser.VERSION_KEY)
            self.state = 52
            self.match(YamlDockerParser.COLON)
            self.state = 53
            self.value()
            self.state = 54
            self.match(YamlDockerParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Services_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SERVICES_KEY(self):
            return self.getToken(YamlDockerParser.SERVICES_KEY, 0)

        def COLON(self):
            return self.getToken(YamlDockerParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(YamlDockerParser.NEWLINE, 0)

        def service_entry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YamlDockerParser.Service_entryContext)
            else:
                return self.getTypedRuleContext(YamlDockerParser.Service_entryContext,i)


        def getRuleIndex(self):
            return YamlDockerParser.RULE_services_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterServices_block" ):
                listener.enterServices_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitServices_block" ):
                listener.exitServices_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitServices_block" ):
                return visitor.visitServices_block(self)
            else:
                return visitor.visitChildren(self)




    def services_block(self):

        localctx = YamlDockerParser.Services_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_services_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(YamlDockerParser.SERVICES_KEY)
            self.state = 57
            self.match(YamlDockerParser.COLON)
            self.state = 58
            self.match(YamlDockerParser.NEWLINE)
            self.state = 60 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 59
                self.service_entry()
                self.state = 62 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==12):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Service_entryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(YamlDockerParser.NAME, 0)

        def COLON(self):
            return self.getToken(YamlDockerParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(YamlDockerParser.NEWLINE, 0)

        def service_prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YamlDockerParser.Service_propContext)
            else:
                return self.getTypedRuleContext(YamlDockerParser.Service_propContext,i)


        def getRuleIndex(self):
            return YamlDockerParser.RULE_service_entry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterService_entry" ):
                listener.enterService_entry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitService_entry" ):
                listener.exitService_entry(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitService_entry" ):
                return visitor.visitService_entry(self)
            else:
                return visitor.visitChildren(self)




    def service_entry(self):

        localctx = YamlDockerParser.Service_entryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_service_entry)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(YamlDockerParser.NAME)
            self.state = 65
            self.match(YamlDockerParser.COLON)
            self.state = 66
            self.match(YamlDockerParser.NEWLINE)
            self.state = 68 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 67
                    self.service_prop()

                else:
                    raise NoViableAltException(self)
                self.state = 70 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Service_propContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def image_prop(self):
            return self.getTypedRuleContext(YamlDockerParser.Image_propContext,0)


        def ports_prop(self):
            return self.getTypedRuleContext(YamlDockerParser.Ports_propContext,0)


        def environment_prop(self):
            return self.getTypedRuleContext(YamlDockerParser.Environment_propContext,0)


        def networks_ref_prop(self):
            return self.getTypedRuleContext(YamlDockerParser.Networks_ref_propContext,0)


        def getRuleIndex(self):
            return YamlDockerParser.RULE_service_prop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterService_prop" ):
                listener.enterService_prop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitService_prop" ):
                listener.exitService_prop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitService_prop" ):
                return visitor.visitService_prop(self)
            else:
                return visitor.visitChildren(self)




    def service_prop(self):

        localctx = YamlDockerParser.Service_propContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_service_prop)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.image_prop()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.ports_prop()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.environment_prop()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.networks_ref_prop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Image_propContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMAGE_KEY(self):
            return self.getToken(YamlDockerParser.IMAGE_KEY, 0)

        def COLON(self):
            return self.getToken(YamlDockerParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(YamlDockerParser.ValueContext,0)


        def NEWLINE(self):
            return self.getToken(YamlDockerParser.NEWLINE, 0)

        def getRuleIndex(self):
            return YamlDockerParser.RULE_image_prop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImage_prop" ):
                listener.enterImage_prop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImage_prop" ):
                listener.exitImage_prop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImage_prop" ):
                return visitor.visitImage_prop(self)
            else:
                return visitor.visitChildren(self)




    def image_prop(self):

        localctx = YamlDockerParser.Image_propContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_image_prop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(YamlDockerParser.IMAGE_KEY)
            self.state = 79
            self.match(YamlDockerParser.COLON)
            self.state = 80
            self.value()
            self.state = 81
            self.match(YamlDockerParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ports_propContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PORTS_KEY(self):
            return self.getToken(YamlDockerParser.PORTS_KEY, 0)

        def COLON(self):
            return self.getToken(YamlDockerParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(YamlDockerParser.NEWLINE, 0)

        def list_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YamlDockerParser.List_itemContext)
            else:
                return self.getTypedRuleContext(YamlDockerParser.List_itemContext,i)


        def getRuleIndex(self):
            return YamlDockerParser.RULE_ports_prop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPorts_prop" ):
                listener.enterPorts_prop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPorts_prop" ):
                listener.exitPorts_prop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPorts_prop" ):
                return visitor.visitPorts_prop(self)
            else:
                return visitor.visitChildren(self)




    def ports_prop(self):

        localctx = YamlDockerParser.Ports_propContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ports_prop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(YamlDockerParser.PORTS_KEY)
            self.state = 84
            self.match(YamlDockerParser.COLON)
            self.state = 85
            self.match(YamlDockerParser.NEWLINE)
            self.state = 87 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 86
                self.list_item()
                self.state = 89 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==9):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Environment_propContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENVIRONMENT_KEY(self):
            return self.getToken(YamlDockerParser.ENVIRONMENT_KEY, 0)

        def COLON(self):
            return self.getToken(YamlDockerParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(YamlDockerParser.NEWLINE, 0)

        def list_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YamlDockerParser.List_itemContext)
            else:
                return self.getTypedRuleContext(YamlDockerParser.List_itemContext,i)


        def getRuleIndex(self):
            return YamlDockerParser.RULE_environment_prop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnvironment_prop" ):
                listener.enterEnvironment_prop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnvironment_prop" ):
                listener.exitEnvironment_prop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnvironment_prop" ):
                return visitor.visitEnvironment_prop(self)
            else:
                return visitor.visitChildren(self)




    def environment_prop(self):

        localctx = YamlDockerParser.Environment_propContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_environment_prop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(YamlDockerParser.ENVIRONMENT_KEY)
            self.state = 92
            self.match(YamlDockerParser.COLON)
            self.state = 93
            self.match(YamlDockerParser.NEWLINE)
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.list_item()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==9):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Networks_ref_propContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NETWORKS_KEY(self):
            return self.getToken(YamlDockerParser.NETWORKS_KEY, 0)

        def COLON(self):
            return self.getToken(YamlDockerParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(YamlDockerParser.NEWLINE, 0)

        def list_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YamlDockerParser.List_itemContext)
            else:
                return self.getTypedRuleContext(YamlDockerParser.List_itemContext,i)


        def getRuleIndex(self):
            return YamlDockerParser.RULE_networks_ref_prop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetworks_ref_prop" ):
                listener.enterNetworks_ref_prop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetworks_ref_prop" ):
                listener.exitNetworks_ref_prop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNetworks_ref_prop" ):
                return visitor.visitNetworks_ref_prop(self)
            else:
                return visitor.visitChildren(self)




    def networks_ref_prop(self):

        localctx = YamlDockerParser.Networks_ref_propContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_networks_ref_prop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(YamlDockerParser.NETWORKS_KEY)
            self.state = 100
            self.match(YamlDockerParser.COLON)
            self.state = 101
            self.match(YamlDockerParser.NEWLINE)
            self.state = 103 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 102
                self.list_item()
                self.state = 105 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==9):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Networks_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NETWORKS_KEY(self):
            return self.getToken(YamlDockerParser.NETWORKS_KEY, 0)

        def COLON(self):
            return self.getToken(YamlDockerParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(YamlDockerParser.NEWLINE, 0)

        def network_entry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YamlDockerParser.Network_entryContext)
            else:
                return self.getTypedRuleContext(YamlDockerParser.Network_entryContext,i)


        def getRuleIndex(self):
            return YamlDockerParser.RULE_networks_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetworks_block" ):
                listener.enterNetworks_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetworks_block" ):
                listener.exitNetworks_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNetworks_block" ):
                return visitor.visitNetworks_block(self)
            else:
                return visitor.visitChildren(self)




    def networks_block(self):

        localctx = YamlDockerParser.Networks_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_networks_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(YamlDockerParser.NETWORKS_KEY)
            self.state = 108
            self.match(YamlDockerParser.COLON)
            self.state = 109
            self.match(YamlDockerParser.NEWLINE)
            self.state = 111 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 110
                self.network_entry()
                self.state = 113 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==12):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Network_entryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(YamlDockerParser.NAME, 0)

        def COLON(self):
            return self.getToken(YamlDockerParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(YamlDockerParser.NEWLINE, 0)

        def network_prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YamlDockerParser.Network_propContext)
            else:
                return self.getTypedRuleContext(YamlDockerParser.Network_propContext,i)


        def getRuleIndex(self):
            return YamlDockerParser.RULE_network_entry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetwork_entry" ):
                listener.enterNetwork_entry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetwork_entry" ):
                listener.exitNetwork_entry(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNetwork_entry" ):
                return visitor.visitNetwork_entry(self)
            else:
                return visitor.visitChildren(self)




    def network_entry(self):

        localctx = YamlDockerParser.Network_entryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_network_entry)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(YamlDockerParser.NAME)
            self.state = 116
            self.match(YamlDockerParser.COLON)
            self.state = 117
            self.match(YamlDockerParser.NEWLINE)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 118
                self.network_prop()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Network_propContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DRIVER_KEY(self):
            return self.getToken(YamlDockerParser.DRIVER_KEY, 0)

        def COLON(self):
            return self.getToken(YamlDockerParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(YamlDockerParser.ValueContext,0)


        def NEWLINE(self):
            return self.getToken(YamlDockerParser.NEWLINE, 0)

        def getRuleIndex(self):
            return YamlDockerParser.RULE_network_prop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetwork_prop" ):
                listener.enterNetwork_prop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetwork_prop" ):
                listener.exitNetwork_prop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNetwork_prop" ):
                return visitor.visitNetwork_prop(self)
            else:
                return visitor.visitChildren(self)




    def network_prop(self):

        localctx = YamlDockerParser.Network_propContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_network_prop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(YamlDockerParser.DRIVER_KEY)
            self.state = 125
            self.match(YamlDockerParser.COLON)
            self.state = 126
            self.value()
            self.state = 127
            self.match(YamlDockerParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DASH(self):
            return self.getToken(YamlDockerParser.DASH, 0)

        def value(self):
            return self.getTypedRuleContext(YamlDockerParser.ValueContext,0)


        def NEWLINE(self):
            return self.getToken(YamlDockerParser.NEWLINE, 0)

        def getRuleIndex(self):
            return YamlDockerParser.RULE_list_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_item" ):
                listener.enterList_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_item" ):
                listener.exitList_item(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_item" ):
                return visitor.visitList_item(self)
            else:
                return visitor.visitChildren(self)




    def list_item(self):
